<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.step.pps2701.blokhin.activities.SecondActivity">


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/backsecond"
            android:id="@+id/imgBkSecond" android:contentDescription="@string/stBkImgDescription"/>

    <Button
            android:text="@string/stBtnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnClose" />

    <TextView
            android:text="@string/stSecondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:id="@+id/txtTitle" android:textSize="24sp" android:fontFamily="sans-serif"
            android:textColor="?attr/colorControlNormal"/>
</RelativeLayout>
